[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemies/CorruptedVillager/state_machine/StateMachine.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/assets/sounds/60013__qubodup__whoosh.wav" type="AudioStream" id=2]
[ext_resource path="res://enemies/CorruptedVillager/CorruptedVillager.gd" type="Script" id=3]
[ext_resource path="res://utils/Plane2DMovementHelper.tscn" type="PackedScene" id=4]
[ext_resource path="res://utils/DropItemComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://effects/sounds/damage_sound_scenes.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/CorruptedVillager/Sounds/peasant_eyes.ogg" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="BoxShape" id=2]

[node name="CorruptedVillager" type="KinematicBody"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 3 )

[node name="StunnedTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.838304 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
transform = Transform( 3.13232, 0, 0, 0, 0.1, 0, 0, 0, 3.27848, 0, 0, -0.641649 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.777429, 0, 0, 0, 0.5, 0, 0, 0, 1.043, 0, 0, 0.213581 )
shape = SubResource( 2 )

[node name="Plane2DMovementHelper" parent="." instance=ExtResource( 4 )]

[node name="DropItemComponent" parent="." instance=ExtResource( 5 )]

[node name="DamageAudioStreamPlayer3D" parent="." instance=ExtResource( 6 )]

[node name="AttackAudioStreamPlayer3D" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 2 )

[node name="AmbientAudioDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="TelegraphAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 5.872
unit_size = 3.7

[node name="DamageSpriteModulateTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Tween" type="Tween" parent="."]
